working on the paper, first draft is ready

--- a/thesis/content/chp-4-impl.tex
+++ b/thesis/content/chp-4-impl.tex
@@ -45,6 +45,11 @@ Using emotional responses to increase the level of users interaction with a real
 \subsection{Fuzzy Logic for Space Transformation}
 \subsection{Physiological Signals to Arousal and Valence}
 
+\img
+{DotFuzzy Application used to define set of fuzzy rules and store it in xml format}
+{DotFuzzy Application}
+{dotfuzzy.png}
+{dotfuzzy}
 
 \section{Affect Engine} %revision: 2
 Affect Engine is the software unit developed to transform collected physiological data to their equivalent emotional state in real-time. While it is generally agreed that emotions comprise three components: subjective experience (e.g. feeling joyous), expressive behavior (e.g. smiling), and physiological activation (e.g. arousal) ~\cite{scherer1993neuroscience}, Affect Engine provides a framework for transformation of physiological activations and some expressive behaviors. Affect Engine consists of four major components: Sensor Module, Fuzzification Module, Administration Panel and Engine Proxies, Figure \ref{fig:affect-engine} is a schematic view of these components working together. Applications such as games can easily integrate the Affect Engine where emotion recognition can offer adaptive control to maintain user interest and engagement. Once connected via sensors to the emotion recognition system, the affective state of the user can be captured continuously and in real-time, and used as a secondary input in the game logic for an enhanced play experienced.
@@ -101,8 +106,29 @@ The Galvanic Skin Response (GSR, Figure \ref{fig:gsr-sensor}) is useful to measu
 
 
 \section{Integration with Valve Source Engine}
+
+\img
+{Zombie model that attach player as enemy}
+{Zombie model}
+{zombie.png}
+{zombie}
+
 % talk about Modding Half Life EP2
 \subsection{Level Design}
+
+\largeimg
+{Hammer level editor from the Source}
+{Hammer level editor}
+{hammer-editor.png}
+{hammer-editor}
+
+\largeimg
+{Map of the level designed for study in next chapter}
+{Map of the level designed for the study}
+{map-of-level.png}
+{map-of-level}
+
+
 \subsection{The Director}
 
 %-----------------------------------------------------------
