--- a/thesis/content/chp-5-exprm.tex
+++ b/thesis/content/chp-5-exprm.tex
@@ -30,6 +30,12 @@ A four condition (standard, player, NPC, environment) play session was employed 
 at the start of the play session, they were required to press one of the four buttons on the entrance ramp labeled 1 to 4, and when any one of these buttons were pressed, the Affect engine started calibrating players signals for 60 seconds, during the calibration mode, no adjustment to any of game parameters is applied, no matter which condition is being played. After the one minute of calibration the system decides the standard range of signal for player's excitement value. After that except for the condition number 1 which is the no adaptation mode, the captured excitement value is normalized in the calibrated player range of excitement into a value between 0 and 1, and this value is then used to adjust the game parameters, this process of capturing, adjusting and applying the signal value would continue for 3 minutes until the next cycle of calibrating and adjustment starts. The player is required to play every condition for at least 5 minutes to ensure capturing of a complete cycle of calibrating and adjustment. After playing each condition, the player is asked to rest for 7 minutes, during this time the player is asked to fill out between condition questionnaires, which tries to ask the participant to self-estimate his affect level. The Player Mode is labeled as condition number 2, the NPC mode is labeled as condition number 3 and the Environment mode is labeled as condition number 4. From the 17 participants in this study, one has been lacking adequate level of expertise and therefore was unable to continue doing the required tasks at the expected level and therefore his results was not usable for this study. The image of signal values for this participant is depicted at the following:
 %%%%%%%%% nasty
 
+\img
+{Starting buttons players need to press to start playing a specific condition}
+{Starting buttons}
+{starting-buttons.png}
+{starting-buttons}
+
 \section{Procedure}
 
 The experiment was piloted with six participants (2 female). Pilot participants were selected from the Interaction Lab at the University of Saskatchewan, their comments on different mechanisms and online questionnaires of the experiment were reviewed to make participant more comfortable and less intervened during the experiment. Also pilot participants physiological data was recorded to confirm the functionality of the system during the experiment.
@@ -258,24 +264,6 @@ Experiences' difference   & Mean difference   & Lower bound   & Upper bound   & 
 \end{tabular}
 \end{center}
 %-----------------------------------------------------------
-
-\img
-{Q-Q plot for excitement}
-{Normal q-q plot for excitement}
-{res-4.png}
-{plot-excitement}
-
-\img
-{Plot of residuals vs. fitted values}
-{Plot of residuals vs. fitted values}
-{res-5.png}
-{residuals-vs-fitted}
-
-\img
-{Plot of residuals vs. conditions}
-{Plot of residuals vs. conditions}
-{res-6.png}
-{residuals-vs-conditions}
 
 %-----------------------------------------------------------
 \begin{center}
