--- a/paper/common.tex
+++ b/paper/common.tex
@@ -8,7 +8,7 @@
 %{label}
 
 \newcommand{\img}[4]{
-\begin{figure}[h!]
+\begin{figure}[h]
   \caption[#1]{#2}
   \centering
   \includegraphics[width=0.5\textwidth]{images/#3}
