almost finished my work on the paper

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -347,3 +347,10 @@
   year={1994},
   publisher={Elsevier}
 }
+@misc{tt2013procomp,
+  author = {Thought Technology Ltd.},
+  title = {{Procomp Infinity Hardware Manual}},
+  howpublished = "\url{http://www.thoughttechnology.com/manual.htm/}",
+  year = {2013},
+  note = "[Online; accessed 20-April-2013]"
+}
