added new split data for full play episodes

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -354,3 +354,27 @@
   year = {2013},
   note = "[Online; accessed 20-April-2013]"
 }
+@inproceedings{aggag2011affective,
+  title={Affective gaming: a GSR based approach},
+  author={Aggag, Ahmed and Revett, Kenneth},
+  booktitle={Proceedings of the 15th WSEAS international conference on Computers},
+  pages={262--266},
+  year={2011},
+  organization={World Scientific and Engineering Academy and Society (WSEAS)}
+}
+@incollection{tijs2009creating,
+  title={Creating an emotionally adaptive game},
+  author={Tijs, Tim and Brokken, Dirk and IJsselsteijn, Wijnand},
+  booktitle={Entertainment Computing-ICEC 2008},
+  pages={122--133},
+  year={2009},
+  publisher={Springer}
+}
+@incollection{xiang2013dynamic,
+  title={Dynamic Difficulty Adjustment by Facial Expression},
+  author={Xiang, Nan and Yang, Lili and Zhang, Mingmin},
+  booktitle={Informatics and Management Science V},
+  pages={761--768},
+  year={2013},
+  publisher={Springer}
+}
