--- a/thesis/content/chp-3-video-games.tex
+++ b/thesis/content/chp-3-video-games.tex
@@ -163,7 +163,7 @@ Although Sykes and Brown in their study do not investigate the effect of NPC and
 
 %% Dynamic Difficulty Adjustment by Facial Expression.pdf
 \subsection{Difficulty Level and Facial Expression}
-Xiang et al. in their study on dynamic difficulty adjustment by facial expression provided an emotion based dynamic game adjusting prototype named Emotetris, which utilizes facial expression captured using a camera and then detect emotional state of the player between four different states of frustrated, relax, excited and bored. Their prototype adjusts game difficulty level dynamically according to these emotional states. Their method of dynamic adjustment combines the in-game performance and facial expressions of players to dynamically adjust the game difficulty. In their study they have shown how better the dynamic difficulty adjustment can attract players' attention when they were bored and release the pressure when they were frustrated.
+Xiang et al. ~\cite{xiang2013dynamic} in their study on dynamic difficulty adjustment by facial expression provided an emotion based dynamic game adjusting prototype named Emotetris, which utilizes facial expression captured using a camera and then detect emotional state of the player between four different states of frustrated, relax, excited and bored. Their prototype adjusts game difficulty level dynamically according to these emotional states. Their method of dynamic adjustment combines the in-game performance and facial expressions of players to dynamically adjust the game difficulty. In their study they have shown how better the dynamic difficulty adjustment can attract players' attention when they were bored and release the pressure when they were frustrated.
 
 They have adjusted Tetris to evaluate the performance of player. In their prototype the speed of dropping items is the parameter to be adjusted as it directly affects players. In their study they used 20 participants, from which 16 players thought the game could make in-time adjustment when they were frustrated or bored. Also 14 players among them considered the expression based game adjustment is better than in-game performance based adjustment in brining them better game experience.
 
